# cpp_result

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  main.cpp  optional.hpp  result.hpp
cmake/: resultConfig.cmake.in
include/: optional.hpp
include/result/: result.hpp
include/result/detail/: optional.hpp
tests/: CMakeLists.txt  test_result.cpp
